testdata/baselines/reference/submodule/compiler/jsExtendsImplicitAny.errors.txt
/b.js(1,17): error TS2314: Generic type 'A<T>' requires 1 type argument(s).
/b.js(2,5): error TS2351: This expression is not constructable.
  Type 'typeof B' has no construct signatures.
/b.js(5,17): error TS2314: Generic type 'A<T>' requires 1 type argument(s).
/b.js(6,5): error TS2351: This expression is not constructable.
  Type 'typeof C' has no construct signatures.
/b.js(9,17): error TS2314: Generic type 'A<T>' requires 1 type argument(s).
/b.js(10,5): error TS2351: This expression is not constructable.
  Type 'typeof D' has no construct signatures.


==== /a.d.ts (0 errors) ====
    declare class A<T> { x: T; }
    
==== /b.js (6 errors) ====
    class B extends A {}
                    ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
    new B().x;
        ~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type 'typeof B' has no construct signatures.
    
    /** @augments A */
    class C extends A { }
                    ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
    new C().x;
        ~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type 'typeof C' has no construct signatures.
    
    /** @augments A<number, number, number> */
    class D extends A {}
                    ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
    new D().x;
        ~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type 'typeof D' has no construct signatures.